# fred-zulip-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  config.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testing.py
.github/workflows/: ci.yml
context/: system_prompt_rules.txt
data/: DDLs.rtf  system_prompt_rules.txt
docs/: refactor_plan.md
fred_zulip_bot/: legacy_app.py
fred_zulip_bot/adapters/: __init__.py  mysql_client.py  zulip_client.py
fred_zulip_bot/adapters/history_repo/: __init__.py  base.py  files_repo.py  tinydb_repo.py
fred_zulip_bot/apps/api/: __init__.py  app.py
fred_zulip_bot/apps/api/routes/: __init__.py  chat.py  health.py
fred_zulip_bot/core/: models.py
fred_zulip_bot/orchestration/: __init__.py  graph.py
fred_zulip_bot/services/: __init__.py  chat_service.py  intent_service.py  sql_service.py
stubs/google/: __init__.pyi
stubs/google/generativeai/: __init__.py  __init__.pyi
tests/: conftest.py  test_app_factory.py  test_chat_service.py  test_history_repo.py  test_intent_service.py  test_mysql_client.py  test_orchestration_graph.py  test_placeholder.py  test_routes_chat.py  test_routes_health.py  test_sql_service.py  test_zulip_client.py
tools/: migrate_history_to_tinydb.py
